crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__fallback-choice-on-thread.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/fallback-choice-on-thread
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Should be 1 not 0: 1.\n" [Done]
outcome: Done
