crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__gather-choice-same-line.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/gather-choice-same-line
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0, 0] === PASS
> "" [Choices: "hello" (0) -> 0]
> "hello\n" [Choices: "world" (0) -> 0]
> "world\n" [Done]
outcome: Done
