crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__knot-body-choice-with-stitches-following.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/knot-body-choice-with-stitches-following
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "an option" (0) -> 0]
> "an option\n" [Continue]
> "Some content with no gather.\n" [Done]
outcome: Error
